# oskernel2022

./: .gitignore  CHANGELOG  LICENSE  Makefile  README.md  sbi-qemu
dependencie/simple-chunk-allocator/src/: page_aligned.rs
doc/: 1-总言.md  2-文件系统.md  3-FAT32.md  4-内存管理.md  5-进程管理.md  关于决赛第一阶段.md
doc/images/excalidraw/: FAT32_layers.excalidraw  disk_layout.excalidraw  system_architecture.excalidraw  vfs.excalidraw
doc/images/xmind/: sys_write.xmind
docs/: 带地址空间的分时多任务操作系统运行第一个程序流程图.xmind
easy-fs/: Cargo.toml
easy-fs-fuse/: Cargo.toml
easy-fs-fuse/src/: main.rs
easy-fs/src/: bitmap.rs  block_cache.rs  block_dev.rs  efs.rs  layout.rs  lib.rs  vfs.rs
fat32-fuse/: Cargo.toml  qemu_fs.sh
fat32-fuse/src/: main.rs
os/: Cargo.toml  Makefile  auto_test.sh  build.rs  makefile
os/.cargo/: config
os/src/: batch.rs  buildin_app.S  config.rs  console.rs  entry.asm  lang_items.rs  linker-k210.ld  linker-qemu.ld  loader.rs  main.rs  sbi.rs  timer.rs
os/src/boards/: k210.rs  qemu.rs
os/src/drivers/: mod.rs
os/src/drivers/block/: mod.rs  sdcard.rs  virtio_blk.rs
os/src/fs/: dirent.rs  fdset.rs  inode.rs  mod.rs  mount.rs  pipe.rs  stat.rs  stdio.rs
os/src/fs_new/: inode.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs  vm_area.rs  vma.rs
os/src/sync/: mod.rs  up.rs
os/src/syscall/: errno.rs  fs.rs  mod.rs  process.rs  signal.rs  sigset.rs  socket.rs  sync.rs  thread.rs
os/src/task/: _id.rs  _process.rs  aux.rs  context.rs  id.rs  info.rs  manager.rs  mod.rs  pid.rs  process.rs  processor.rs  resource.rs  signal.rs  switch.S  switch.rs  task.rs
os/src/trap/: context.rs  mod.rs  trap.S
simple-fat32/: Cargo.toml  README.md  create_img.sh
simple-fat32/src/: bitmap.rs  block_cache.rs  block_dev.rs  console.rs  fat32_manager.rs  layout.rs  lib.rs  vfs.rs
test_program/final/custom-test/: .gitignore  Makefile  pass_list.txt  static.txt
test_program/final/custom-test/src/common/: runtest.c
test_program/final/custom-test/src/functional/: env.c  fdopen.c  fscanf.c  stat.c
test_program/final/sdcard_content/: dump_static
test_program/final/stage1/custom-test/: entry.h.content
test_program/final/stage2/micropython/: libffi.so.8.1.0  micropython
test_program/final/stage2/sdcard_content/: busybox_cmd.txt
user/: Cargo.toml  Makefile  build.py  makefile
user/.cargo/: config
user/src/: console.rs  lang_items.rs  lib.rs  linker.ld  syscall.rs
user_c/: Makefile
user_c/include/: stddef.h  stdio.h  syscall.h  unistd.h
user_c/lib/: lib.c  syscall.c
user_c/lib/arch/riscv/: syscall_ids.h  user.ld
user_c/src/: c_exec.c  c_exit.c  c_fork.c  c_getppid.c  c_gettimeofday.c  c_hello.c  c_sleep.c  c_uname.c  c_usertests.c  clone.c  dup.c  exec.c  exit.c  getpid.c  getppid.c  mmap.c  munmap.c  my_pipe.c  pipe.c  read.c  test_echo.c  times.c  usertests.c  usertests_submit.c  wait.c  waitpid.c  write.c
(+5 files in other folders)
