# os/Cargo.toml

[package]
name = "os"
version = "0.1.0"
authors = ["Jeremy <Jeremy_Merle@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://jeremymo.top:66/GitLab/Jeremy/riscv", features = ["inline-asm"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
cfg-if = { version = "1.0.0" }
buddy_system_allocator = "0.6"
bitflags = "1.2.1"
xmas-elf = "0.7.0"

[features]
board_qemu = []
board_k210 = []