[package]
name = "os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
simple-chunk-allocator = {path = "../dependency/simple-chunk-allocator"}
linked_list_allocator = "0.9.1"
bitflags = "1.3.2"
xmas-elf = "0.7.0"
spin = "0.7.1"
simple-fat32 = { path = "../simple-fat32", features = [] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
k210-pac = { git = "https://github.com/wyfcyx/k210-pac" }
k210-hal = { git = "https://github.com/wyfcyx/k210-hal" }
k210-soc = { git = "https://github.com/wyfcyx/k210-soc" }

[features]
board_qemu = []
board_k210 = []

[profile.release]
debug = true